@@ -538,16 +538,19 @@ dl.portlet li {
 #content pre {
 	background-color: #222;
 	color: White;
-	font-family: Consolas, Inconsolata, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;	
+	font-family: Consolas, Inconsolata, Menlo, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;	
 	padding: 1em;
 	overflow-x: auto;
 	font-size: 90%;
 	margin-bottom: 1em;
-	line-height: 1em;
+	line-height: 1.25em;
+}
+#content pre.python {
+	background-color: White;
 }
 
 #content code {
-	font-family: Consolas, Inconsolata, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;	
+	font-family: Consolas, Inconsolata, Menlo, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;	
 }
 
 #content div.documentByLine {
