@@ -3,6 +3,9 @@ Changelog
 
 1.0b8 - unreleased
 ------------------
+- Improved default rendering for Python code listings when using the
+  syntax coloring, and improved the overall typography for code.
+  This fixes http://dev.plone.org/plone/ticket/10692.
 
 - Adding eventDetails styling and vertical table styles, this fixes 
   http://dev.plone.org/plone/ticket/10540.
